# ct-free-multi-organ-segmentation-for-total-body-pet-scans

./: README.md  nnunetv2.env  pyproject.toml
pet_seg/: 01_organize_raw_data.py  01_run_totalsegmentator.py  02_merge_ts_seg_labels.py  02_prepare_moose_to_run_data.py  02_resize_ts_seg_to_pet.py  03_create_data_csv.py  04_convert_data_for_nnunet.py  05_predict_nnunet.py  06_extract_nnunet_results.py  06_merge_predicted_labels.py  07_anaylze_nnunet_results.py  08_plot_nnunet_results.py  08_plot_nnunet_results_new.py  settings.py  train.py  utils.py
pet_seg/dynamic/: 03_create_data_csv.py
tests/: test_train.py
